fix(frontend): don't overflow the footer when the content has more than 100% height

--- a/frontend/src/components/templates/MainLayout/style.scss
+++ b/frontend/src/components/templates/MainLayout/style.scss
@@ -1,7 +1,7 @@
 @import 'styles/colors.scss';
 
 .box {
-  height: 100%;
+  min-height: 100%;
 
   display: flex;
   flex-direction: column;
